# management-of-class-positions

./: README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: release.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-04-classdeck/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-classdeck/specs/course-management/: spec.md
openspec/changes/archive/2026-06-04-classdeck/specs/drive-sync/: spec.md
openspec/changes/archive/2026-06-04-classdeck/specs/local-storage/: spec.md
openspec/changes/archive/2026-06-04-classdeck/specs/seating-grid/: spec.md
openspec/changes/archive/2026-06-04-classdeck/specs/user-auth/: spec.md
openspec/changes/archive/2026-06-05-ci-cd-pipeline/: tasks.md
openspec/changes/ci-cd-pipeline/: design.md  proposal.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/grid/: SeatingGrid.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
